QCLINUX: arm64: dts: qcom: qcm6490-addons: Add node for IMEM
IMEM is used for used for various debug features. Here we add node
for kaslr offset in IMEM.

Change-Id: I7781c76978771d77258a920eb279f0a34bfd425b
Signed-off-by: Shivendra Pratap <quic_spratap@quicinc.com>
(cherry picked from commit dee51539bdbb4d3289921bc38a589fb7d0c35434)
Signed-off-by: Hui Wang <hui.wang@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-addons.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-addons.dtsi
@@ -11,4 +11,11 @@
 		compatible = "qcom,gh-watchdog";
 		interrupts = <0 0 IRQ_TYPE_LEVEL_HIGH>;
 	};
+
+	sram@146a5000{
+		kaslr_offset@56d0 {
+			compatible = "qcom,msm-imem-kaslr_offset";
+			reg = <0x56d0 0xc>;
+		};
+	};
 };
