QCLINUX: arm64: dts: qcom: qcm6490-addons: Disable wdt-sc7280
Disable watchdog driver for sc7280. This driver directly accesses
watchdog registers which causes a synchronous abort. Watchdog
registers are not accessible to kernel as they are virtualized.

Change-Id: Ia07961214cb6b50fea86c878c6e26b74a9ae0ce6
Signed-off-by: Shivendra Pratap <quic_spratap@quicinc.com>
(cherry picked from commit 9f758c5c65798454391bc947dabb5614f8dc35a8)
Signed-off-by: Hui Wang <hui.wang@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-addons.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-addons.dtsi
@@ -7,6 +7,10 @@
  */
 
 &soc {
+	watchdog@17c10000 {
+		status = "disabled";
+	};
+
 	wdog_gh: qcom,wdt_gh {
 		compatible = "qcom,gh-watchdog";
 		interrupts = <0 0 IRQ_TYPE_LEVEL_HIGH>;
