--- a/arch/arm64/configs/qcom_defconfig
+++ b/arch/arm64/configs/qcom_defconfig
@@ -599,6 +599,7 @@ CONFIG_SM_GPUCC_8250=y
 CONFIG_SM_GPUCC_8550=y
 CONFIG_SM_TCSRCC_8550=y
 CONFIG_SM_VIDEOCC_8250=y
+CONFIG_SM_VIDEOCC_8550=y
 CONFIG_QCOM_HFPLL=y
 CONFIG_CLK_GFM_LPASS_SM8250=m
 CONFIG_HWSPINLOCK=y
