QCLINUX: arm64: defconfig: qcom: enable flash led device
Enable flash leds module for aim300 platform.

Change-Id: Iea3010859aacf7f0ab466b07b0b369b12b2f70f2
Signed-off-by: Hui Liu <quic_huliu@quicinc.com>
(cherry picked from commit 922289550a67c736dd88f514426089f7449f6d39
 https://git.codelinaro.org/clo/la/kernel/qcom kernel.qclinux.1.0.r1-rel)
Signed-off-by: Hui Wang <hui.wang@canonical.com>

--- a/arch/arm64/configs/qcom_defconfig
+++ b/arch/arm64/configs/qcom_defconfig
@@ -506,10 +506,12 @@ CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
+CONFIG_LEDS_CLASS_FLASH=m
 CONFIG_LEDS_CLASS_MULTICOLOR=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
+CONFIG_LEDS_QCOM_FLASH=m
 CONFIG_LEDS_QCOM_LPG=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_DISK=y
