--- a/arch/arm64/boot/dts/qcom/qcm6490-addons-rb3.dts
+++ b/arch/arm64/boot/dts/qcom/qcm6490-addons-rb3.dts
@@ -14,6 +14,82 @@
 / {
 	model = "Qualcomm Technologies, Inc. qcm6490-addons RB3 platform";
 	compatible = "qcom,qcm6490-addons-rb3","qcom,sc7280";
+
+	qps615_0p9_vreg: qps615-0p9-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "qps615_0p9_vreg";
+		gpio = <&pm8350c_gpios 2 0>;
+		regulator-min-microvolt = <1000000>;
+		regulator-max-microvolt = <1000000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <4300>;
+	};
+
+	qps615_1p8_vreg: qps615-1p8-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "qps615_1p8_vreg";
+		gpio = <&pm8350c_gpios 3 0>;
+		vin-supply = <&qps615_0p9_vreg>;
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <10000>;
+	};
+
+	qps615_rsex_vreg: qps615-rsex-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "qps615_rsex_vreg";
+		gpio = <&pm8350c_gpios 1 0>;
+		vin-supply = <&qps615_1p8_vreg>;
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <10000>;
+	};
+
+	usb_hub_1p05_vreg: usb-hub-1p05-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "usb_hub_1p05_vreg";
+		gpio = <&pm7250b_gpios 4 0>;
+		vin-supply = <&qps615_rsex_vreg>;
+		regulator-min-microvolt = <1000000>;
+		regulator-max-microvolt = <1000000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <5000>;
+	};
+
+	usb_hub_3p3_vreg: usb-hub-3p3-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "usb_hub_3p3_vreg";
+		gpio = <&pm7250b_gpios 1 0>;
+		vin-supply = <&usb_hub_1p05_vreg>;
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <10000>;
+	};
+
+	usb_hub_rest_vreg: usb-hub-rest-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "usb_hub_rest_vreg";
+		gpio = <&pm8350c_gpios 4 0>;
+		vin-supply = <&usb_hub_3p3_vreg>;
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		enable-active-high;
+	};
+};
+
+&i2c0 {
+	clock-frequency = <100000>;
+	status = "okay";
+
+	qps615_switch: pcie-switch@77 {
+		compatible = "qcom,switch-i2c";
+		reg = <0x77>;
+		vdda-supply = <&usb_hub_rest_vreg>;
+		status = "okay";
+	};
 };
 
 &i2c1 {
@@ -214,6 +290,14 @@
 			};
 		};
 	};
+};
+
+&pcie1 {
+	dummy-supply = <&qps615_switch>;
+};
+
+&pcie1_phy {
+	qcom,refclk-always-on;
 };
 
 &pm8350c_gpios {
