UBUNTU: SAUCE: build qcm6490 display driver
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/ubuntu/qcom/Makefile
+++ b/ubuntu/qcom/Makefile
@@ -32,3 +32,9 @@ export CONFIG_CNSS_GENL=m
 export CONFIG_CNSS_PLAT_IPC_QMI_SVC=m
 
 obj-y += platform/
+
+###
+
+export DISPLAY_ROOT := $(srctree)/$(src)/display
+
+obj-y += display/
