UBUNTU: SAUCE: update apply overlay application for pre-GA
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/9e9fc326a9bfc2bab135be40d1f15750d6a34423/conf/machine/qcm6490.conf

Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -271,7 +271,8 @@ qcm6490-addons-rb3gen2-video-mezz-ovl-dtbs := \
     qcm6490-graphics.dtbo \
     qcm6490-camera-rb3.dtbo \
     qcm6490-display-rb3.dtbo \
-    qcm6490-wlan-rb3.dtbo
+    qcm6490-wlan-rb3.dtbo \
+    qcm6490-bt.dtbo
 
 dtb-$(CONFIG_ARCH_QCOM) += qcm6490-addons-rb3gen2-vision-mezz-ovl.dtb
 qcm6490-addons-rb3gen2-vision-mezz-ovl-dtbs := \
@@ -279,4 +280,5 @@ qcm6490-addons-rb3gen2-vision-mezz-ovl-dtbs := \
     qcm6490-graphics.dtbo \
     qcm6490-camera-rb3.dtbo \
     qcm6490-display-rb3.dtbo \
-    qcm6490-wlan-rb3.dtbo
+    qcm6490-wlan-rb3.dtbo \
+    qcm6490-bt.dtbo
