UBUNTU: SAUCE: update display DT overlay to pre-GA
Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/display-devicetree/-/tree/c636b3244732a6ef8d7d364664b2db95d74681ca

Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/9e9fc326a9bfc2bab135be40d1f15750d6a34423/recipes-display/display-devicetree/displaydevicetree_git.bb

Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-sde-display-rb3gen2.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-sde-display-rb3gen2.dtsi
@@ -40,7 +40,7 @@
 	/delete-property/ ibb-supply;
 
 	vddio-supply = <&vreg_l8c_1p62>;
-	qcom,dsi-default-panel = <&dsi_ext_bridge_1080p>;
+	qcom,dsi-default-panel = <&dsi_ext_bridge_4k30p>;
 	boot-panel-param = "disabled";
 
 	ports {
