--- a/arch/arm64/boot/dts/qcom/qcm6490-sde-display-idp.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-sde-display-idp.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2023 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "qcm6490-sde-display.dtsi"
@@ -41,4 +41,32 @@
 	lab-supply = <&lcdb_ldo_vreg>;
 	ibb-supply = <&lcdb_ncp_vreg>;
 	qcom,dsi-default-panel = <&dsi_nt36672e_fhd_plus_120_video>;
+};
+
+&mdss_dp0 {
+        vdda-1p2-supply = <&vreg_l6b_1p2>;
+        vdda-0p9-supply = <&vreg_l1b_0p8>;
+};
+
+&i2c13 {
+	status = "ok";
+	qcom,i2c-touch-active="novatek,NVT-ts";
+
+	novatek@62 {
+		compatible = "novatek,NVT-ts";
+		reg = <0x62>;
+
+		interrupt-parent = <&tlmm>;
+		interrupts = <81 0x2008>;
+
+		novatek,reset-gpio = <&tlmm 105 0x00>;
+		novatek,irq-gpio = <&tlmm 81 0x2008>;
+
+		panel = <&dsi_nt36672e_fhd_plus_60_video
+			&dsi_nt36672e_fhd_plus_90hz_video
+			&dsi_nt36672e_fhd_plus_120_video
+			&dsi_nt36672e_fhd_plus_144_video>;
+
+		novatek,touch-environment = "pvm";
+	};
 };
