--- a/arch/arm64/boot/dts/qcom/qcm6490-sde-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-sde-display.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2023 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "dsi-panel-nt36672e-fhd-plus-60hz-video.dtsi"
@@ -150,5 +150,5 @@
 };
 
 &mdss_mdp0 {
-	connectors = <&smmu_sde_unsec &sde_dsi>;
+	connectors = <&smmu_sde_unsec &sde_dsi &mdss_dp0>;
 };
