--- a/arch/arm64/boot/dts/qcom/qcm6490-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-sde.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2023 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include <dt-bindings/clock/qcom,gcc-sc7280.h>
@@ -252,6 +252,128 @@
 		};
 	};
 
+	qcom_msmhdcp: qcom,msm_hdcp {
+		compatible = "qcom,msm-hdcp";
+	};
+
+	mdss_dp0: qcom,dp_display@ae90000 {
+		cell-index = <0>;
+		compatible = "qcom,dp-display";
+		qcom,altmode-dev = <&pmic_glink>;
+
+		reg =   <0 0xae90000 0 0x0fc>,
+			<0 0xae90200 0 0x0c0>,
+			<0 0xae90400 0 0x508>,
+			<0 0xae91000 0 0x098>,
+			<0 0x88eaa00 0 0x200>,
+			<0 0x88ea200 0 0x200>,
+			<0 0x88ea600 0 0x200>,
+			<0 0xaf00f98 0 0x1a0>,
+			<0 0x88ea000 0 0x200>,
+			<0 0x88e8000 0 0x20>,
+			<0 0x0aee1000 0 0x034>,
+			<0 0xaf01004 0 0x8>;
+		reg-names = "dp_ahb", "dp_aux", "dp_link",
+			"dp_p0", "dp_phy", "dp_ln_tx0", "dp_ln_tx1",
+			"dp_mmss_cc", "dp_pll", "usb3_dp_com",
+			"hdcp_physical","gdsc";
+
+		interrupt-parent = <&mdss_mdp0>;
+		interrupts = <12 0>;
+
+		qcom,pll-revision = "7nm";
+		#clock-cells = <1>;
+		clocks =  <&dispcc DISP_CC_MDSS_DP_AUX_CLK>,
+			<&rpmhcc RPMH_CXO_CLK>,
+			<&gcc GCC_USB3_PRIM_PHY_PIPE_CLK>,
+			<&dispcc DISP_CC_MDSS_DP_LINK_CLK>,
+			<&mdss_dp0 0>,
+			<&dispcc DISP_CC_MDSS_DP_LINK_CLK_SRC>,
+			<&dispcc DISP_CC_MDSS_DP_LINK_INTF_CLK>,
+			<&dispcc DISP_CC_MDSS_DP_PIXEL_CLK_SRC>,
+			<&mdss_dp0 1>,
+			<&dispcc DISP_CC_MDSS_DP_PIXEL_CLK>;
+		clock-names = "core_aux_clk", "rpmh_cxo_clk",
+			"core_usb_pipe_clk", "link_clk", "link_parent", "link_clk_src", "link_iface_clk",
+			"pixel_clk_rcg", "pixel_parent", "strm0_pixel_clk";
+
+		qcom,phy-version = <0x420>;
+		qcom,aux-cfg0-settings = [20 00];
+		qcom,aux-cfg1-settings = [24 13];
+		qcom,aux-cfg2-settings = [28 A4];
+		qcom,aux-cfg3-settings = [2c 00];
+		qcom,aux-cfg4-settings = [30 0a];
+		qcom,aux-cfg5-settings = [34 26];
+		qcom,aux-cfg6-settings = [38 0a];
+		qcom,aux-cfg7-settings = [3c 03];
+		qcom,aux-cfg8-settings = [40 b7];
+		qcom,aux-cfg9-settings = [44 03];
+
+		qcom,max-pclk-frequency-khz = <675000>;
+
+		qcom,hbr-rbr-voltage-swing = <0x08 0x0f 0x16 0x1f>,
+					<0x11 0x1e 0x1f 0xff>,
+					<0x16 0x1f 0xff 0xff>,
+					<0x1f 0xff 0xff 0xff>;
+
+		qcom,hbr-rbr-pre-emphasis = <0x00 0x0e 0x15 0x1b>,
+					<0x00 0x0e 0x15 0xff>,
+					<0x00 0x0e 0xff 0xff>,
+					<0x04 0xff 0xff 0xff>;
+
+		qcom,hbr2-3-voltage-swing = <0x02 0x12 0x16 0x1a>,
+					<0x09 0x19 0x1f 0xff>,
+					<0x10 0x1f 0xff 0xff>,
+					<0x1f 0xff 0xff 0xff>;
+
+		qcom,hbr2-3-pre-emphasis = <0x00 0x0c 0x15 0x1b>,
+					<0x02 0x0e 0x16 0xff>,
+					<0x02 0x11 0xff 0xff>,
+					<0x04 0xff 0xff 0xff>;
+
+		qcom,ctrl-supply-entries {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			qcom,ctrl-supply-entry@0 {
+				reg = <0>;
+				qcom,supply-name = "vdda-1p2";
+				qcom,supply-min-voltage = <1200000>;
+				qcom,supply-max-voltage = <1200000>;
+				qcom,supply-enable-load = <21700>;
+				qcom,supply-disable-load = <0>;
+			};
+		};
+
+		qcom,phy-supply-entries {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			qcom,phy-supply-entry@0 {
+				reg = <0>;
+				qcom,supply-name = "vdda-0p9";
+				qcom,supply-min-voltage = <912000>;
+				qcom,supply-max-voltage = <912000>;
+				qcom,supply-enable-load = <115000>;
+				qcom,supply-disable-load = <0>;
+			};
+		};
+
+		qcom,core-supply-entries {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			qcom,core-supply-entry@0 {
+				reg = <0>;
+				qcom,supply-name = "refgen";
+				qcom,supply-min-voltage = <0>;
+				qcom,supply-max-voltage = <0>;
+				qcom,supply-enable-load = <0>;
+				qcom,supply-disable-load = <0>;
+			};
+		};
+	};
+
 	mdss_dsi0: qcom,mdss_dsi_ctrl0@ae94000 {
 		compatible = "qcom,dsi-ctrl-hw-v2.5";
 		label = "dsi-ctrl-0";
@@ -337,9 +459,13 @@
 	clocks = <&rpmhcc RPMH_CXO_CLK>,
 		<&gcc GCC_DISP_GPLL0_CLK_SRC>,
 		<&mdss_dsi_phy0 0>,
-		<&mdss_dsi_phy0 1>;
+		<&mdss_dsi_phy0 1>,
+		<&mdss_dp0 0>,
+		<&mdss_dp0 1>;
 	clock-names = "bi_tcxo",
 		"gcc_disp_gpll0_clk",
 		"dsi0_phy_pll_out_byteclk",
-		"dsi0_phy_pll_out_dsiclk";
+		"dsi0_phy_pll_out_dsiclk",
+		"dp_phy_pll_link_clk",
+		"dp_phy_pll_vco_div_clk";
 };
