UBUNTU: SAUCE: update external DT to GA1
[graphics]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/qcom/opensource/graphics-devicetree/-/tree/9fb5da72367cc6e94bd3ccfc9982150b092be325/gpu
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/873e00b2bcd1bb1316e916d0ac7a7d1d9c4961d7/recipes-graphics/graphicsdevicetree/graphicsdevicetree_git.bb

[display]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/display-devicetree/-/tree/8f5f4ebd4cef982b9f18d6ab9cad8dcdb7848ffa/display
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/873e00b2bcd1bb1316e916d0ac7a7d1d9c4961d7/recipes-multimedia/display/displaydevicetree_git.bb

[camera]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/camera-devicetree/-/tree/5fb3dc9c3af5e474baab3c1694e68196fcefc597
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/camera-kernel/-/tree/64f2a2e9fd0ec71abae773fbdf308b4038c19452
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/873e00b2bcd1bb1316e916d0ac7a7d1d9c4961d7/recipes-multimedia/cameradtb/cameradtb_1.0.bb

[bluetooth]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/qcom-opensource/bt-devicetree/-/tree/c326166c78890b12578cc302e2f21ae32b79286f
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/873e00b2bcd1bb1316e916d0ac7a7d1d9c4961d7/recipes-connectivity/bt-devicetree/btdevicetree_git.bb

[wlan]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/qcom-opensource/wlan/wlan-devicetree/-/tree/fb53a9d3dac81e1a28a5022cc90e059967b57f8e
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/873e00b2bcd1bb1316e916d0ac7a7d1d9c4961d7/recipes-connectivity/wlan/wlan-devicetree_git.bb

Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-sde-display-rb3gen2.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-sde-display-rb3gen2.dtsi
@@ -1,11 +1,43 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2023 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "dsi-panel-ext-bridge-4k30p.dtsi"
 #include "dsi-panel-ext-bridge-1080p.dtsi"
 #include "qcm6490-sde-display.dtsi"
+
+&redriver {
+	vcc-supply = <&vreg_l7c_3p0>;
+};
+
+&mdss_dp0 {
+	usb-phy = <&usb_1_qmpphy>;
+	usb-controller = <&usb_1>;
+	qcom,dp-aux-switch = <&redriver>;
+	vdda-1p2-supply = <&vreg_l6b_1p2>;
+	vdda-0p9-supply = <&vreg_l1b_0p912>;
+};
+
+&pm7250b_gpios {
+	lt9611_rst_pin: lt9611-rst-state {
+		pins = "gpio2";
+		function = "normal";
+
+		output-high;
+		input-disable;
+		power-source = <0>;
+	};
+};
+
+&tlmm {
+	lt9611_irq_pin: lt9611-irq {
+		pins = "gpio24";
+		function = "gpio";
+		drive-strength = <8>;
+		bias-disable;
+	};
+};
 
 &i2c0 {
 	status = "ok";
@@ -15,10 +47,14 @@
 		compatible = "lt,lt9611uxc";
 		reg = <0x2b>;
 
-		interrupts-extended = <&tlmm 24 0x0>;
+		interrupts-extended = <&tlmm 24 IRQ_TYPE_EDGE_FALLING>;
 		reset-gpios = <&pm7250b_gpios 2 0>;
+		lt,preferred-mode = "1920x1080";
 
 		vcc-supply = <&vreg_l11c_2p8>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&lt9611_irq_pin &lt9611_rst_pin>;
 
 		ports {
 			#address-cells = <1>;
@@ -57,9 +93,20 @@
 };
 
 &mdss_dsi_phy0 {
+	/delete-property/ qcom,dsi-pll-ssc-en;
+	/delete-property/ qcom,dsi-pll-ssc-mode;
+
 	vdda-0p9-supply = <&vreg_l10c_0p88>;
 };
 
+&mdss_dsi0 {
+	reg = <0 0xae94000 0 0x400>,
+		<0 0xaf08000 0 0x4>,
+		<0 0x0ae36000 0 0x300>,
+		<0 0xc00c6000 0 0x01000>;
+	reg-names = "dsi_ctrl", "disp_cc_base", "mdp_intf_base", "disp_conf";
+};
+
 &mdss_mdp0 {
-	connectors = <&smmu_sde_unsec &sde_dsi>;
+	connectors = <&smmu_sde_unsec &sde_dsi &mdss_dp0>;
 };
