--- a/arch/arm64/boot/dts/qcom/qcm6490-wlan-rb3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-wlan-rb3.dtsi
@@ -49,6 +49,7 @@ icnss2: qcom,wcn6750 {
 		dma-coherent;
 		qcom,fw-prefix;
 		qcom,wlan;
+		qcom,capin=<0x20>;
 		tsens = "quiet-therm";
 		qcom,wlan-msa-fixed-region = <&wlan_fw_mem>;
 		vdd-cx-mx-supply = <&vreg_s7b_0p972>;
