UBUNTU: SAUCE: arm64: dts: fix a typo quiet-therm to quiet-thermal
BugLink: https://bugs.launchpad.net/carmel/+bug/2059378
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-wlan-rb3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-wlan-rb3.dtsi
@@ -50,7 +50,7 @@ icnss2: qcom,wcn6750 {
 		qcom,fw-prefix;
 		qcom,wlan;
 		qcom,capin=<0x20>;
-		tsens = "quiet-therm";
+		tsens = "quiet-thermal";
 		qcom,wlan-msa-fixed-region = <&wlan_fw_mem>;
 		vdd-cx-mx-supply = <&vreg_s7b_0p972>;
 		qcom,vdd-cx-mx-config = <824000 1120000 0 0 1>;
